# agent_datacenter

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
agent_datacenter/: db.py  device.py  rack.py  shim.py
agent_datacenter/announce/: __init__.py  announce_mcp.py  broker.py  client.py  envelope.py  idle_loop.py  igor_shim.py  invalidator.py  listener.py  manifest.py  (+1 more)
bus/: envelope.py  imap_server.py
config/: device_config.py  dovecot.conf.template
docs/: crash_safe_sessions.md  framework_overview.md  getting_started.md  palace_schema.md  working_together.md
lab/: __init__.py
scripts/: palace_bootstrap.py  palace_seed_decisions.py
skeleton/: registry.py
skills/: manifest.json
tests/: test_announce_client_integration.py  test_announce_integration.py  test_announce_listener.py  test_announce_mcp_adapter.py  test_announce_round_trip.py  test_budget_gate.py  test_bus.py  test_cc_queue_auto_validate.py  test_datacenter_client.py  test_dc_db.py  test_device_contract.py  test_device_perf_and_heartbeat.py  test_discord_bot_device.py  test_identity_layer.py  test_idle_loop.py  test_igor_shim.py  test_inference_via_bus.py  test_invalidator.py  test_librarian.py  test_librarian_curation.py  test_librarian_db_pool.py  test_librarian_mcp_tools.py  test_nighttime_auditor.py  test_palace_bootstrap.py  test_palace_seed_decisions.py  test_palace_writer.py  test_profile_inheritance.py  test_propose_change.py  test_rack_test_device.py  test_skeleton.py  test_skill_deploy.py  test_summarizer_device.py  test_web_channel_delivery.py  test_web_two_tabs.py
(+111 files in other folders)
